--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
+    "formik": "^2.1.4",
     "http-proxy-middleware": "^1.0.3",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0",
@@ -18,7 +20,8 @@
     "react-scripts": "3.4.0",
     "react-scroll": "^1.7.16",
     "react-spring": "^8.0.27",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "yup": "^0.28.5"
   },
   "scripts": {
     "start": "react-scripts start",
