--- a/package.json
+++ b/package.json
@@ -3,24 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.8",
-    "@material-ui/styles": "^4.9.6",
+    "@material-ui/core": "^4.9.14",
+    "@material-ui/lab": "^4.0.0-alpha.53",
+    "@material-ui/styles": "^4.9.14",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
     "formik": "^2.1.4",
-    "http-proxy-middleware": "^1.0.3",
-    "react": "^16.13.0",
-    "react-bootstrap": "^1.0.0",
-    "react-dom": "^16.13.0",
-    "react-router-dom": "^5.1.2",
+    "http-proxy-middleware": "^1.0.4",
+    "lodash": "^4.17.15",
+    "query-string": "^6.12.1",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
+    "react-particles-js": "^3.2.1",
+    "react-redux": "^7.2.0",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
     "react-scroll": "^1.7.16",
+    "react-slick": "^0.26.1",
     "react-spring": "^8.0.27",
+    "react-transition-group": "^4.4.1",
+    "react-visibility-sensor": "^5.1.1",
     "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
+    "slick-carousel": "^1.8.1",
     "yup": "^0.28.5"
   },
   "scripts": {
